@@ -1,2 +1,3 @@
 # hmmmmm
 hmmmmm
+-Dhibernate.temp.use_jdbc_metadata_defaults=false -Dhibernate.hql.bulk_id_strategy=org.hibernate.hql.spi.id.inline.InlineIdsInClauseBulkIdStrategy -Djps.track.ap.dependencies=false -Xverify:none
